<resources>
    <string name="swift_app_name">Swift Installer</string>
    <string name="base_theme">Theme Style</string>
    <string name="basic_usage">Basic usage</string>
    <string name="bg_nature">Nature</string>
    <string name="bg_ocean">Ocean</string>
    <string name="big_tile_install_msg">Manage all your overlays</string>
    <string name="big_tile_install_title">Install / uninstall</string>
    <string name="big_tile_install_updates">Updates available</string>
    <string name="big_tile_personalize_msg">Pick your colors and style</string>
    <string name="big_tile_personalize_title">Personalize</string>
    <string name="big_tile_update_msg">Tap here to select and install them</string>
    <string name="cancel">Cancel</string>
    <string name="category_accent">Accent</string>
    <string name="category_background">Dark Background</string>
    <string name="confirm">Confirm</string>
    <string name="connections">Connections</string>
    <string name="connections_desc">Wi-Fi, Bluetooth, Data usage, Flight mode</string>
    <string name="dark">Dark</string>
    <string name="dark_notifications">Dark notifications</string>
    <string name="dark_notifications_preview_normal">A preview of normal dark notifications</string>
    <string name="disable">Disable</string>
    <string name="enable_shadow_title">Enable shadow around text</string>
    <string name="examined_result_msg">After you examined the result, and optionally sent an error log, you need to manually reboot to finish the installation!</string>
    <string name="examined_result_msg_noerror">You need to reboot to finish the installation!</string>
    <string name="examined_result_msg_error">Overlays failed to install. Click the info button next to the overlay\'s name to reveal why, and optionally email a log to the support team.</string>
    <string name="flat">Flat</string>
    <string name="got_it">Got it!</string>
    <string name="hashtag">#</string>
    <string name="hex">HEX</string>
    <string name="hex_string">#%1$s</string>
    <string name="image">image</string>
    <string name="info_card_failed_msg">One reason an app fails to install is that the app version doesn\'t match the overlays version. We usually update the theme and add support for new versions within a few days, so please be patient.</string>
    <string name="install_count">%1$d / %2$d</string>
    <string name="installing_and_uninstalling_msg">In the process of installing or uninstalling the Android System overlay some apps might force close. This is expected, and normal. Everything will work fine once you rebooted after installation is completed.</string>
    <string name="installing_and_uninstalling_title">Android System</string>
    <string name="bright_accent">Accent is too bright</string>
    <string name="dark_accent">Accent is too dark</string>
    <string name="bright_background">Background is too bright</string>
    <string name="material">Material</string>
    <string name="night">Night</string>
    <string name="notif_fix_desc_summary">When using dark notifications, consider that some texts are hardcoded to black colors, like sender names from group chats. This fix adds a shadow around all texts, making black ones visible too. You can see how it looks in the preview above.</string>
    <string name="dark_notifications_preview_shadow">Notification fix makes black texts visible by adding a white shadow around them.</string>
    <string name="notification_tweaks">Notification background</string>
    <string name="notifications">Notifications</string>
    <string name="notifications_desc">Block, allow, prioritise</string>
    <string name="ok">OK</string>
    <string name="overflow_about">About</string>
    <string name="overlays">Overlays</string>
    <string name="overlays_action_install">Install</string>
    <string name="overlays_action_uninstall">Uninstall</string>
    <string name="overlays_action_update">Update</string>
    <string name="overlays_toolbar_accent">Accent:</string>
    <string name="preview_time_string">22:20 | Sun 19 April</string>
    <string name="proceed">Proceed</string>
    <string name="progress_installing_title">Installing…</string>
    <string name="progress_uninstalling_title">Uninstalling…</string>
    <string name="reboot">Reboot</string>
    <string name="reboot_delay_msg">Installing an overlay, or any APK, on Samsung right after a reboot will take a lot of time. The device needs around 4 mins to finish all the startup processes. If you just rebooted, we recommend waiting a moment before installing overlays or change background and accents.\n\nHave fun theming :)</string>
    <string name="reboot_delay_title">After rebooting</string>
    <string name="reboot_later">Reboot later</string>
    <string name="reboot_manually">You need to reboot manually to finish uninstall.</string>
    <string name="reboot_to_finish">Manually reboot!</string>
    <string name="required">- Required</string>
    <string name="send_error_log">Send error log</string>
    <string name="sender_name_preview">Michael</string>
    <string name="small_info_active">Active :</string>
    <string name="small_info_updates">Updates :</string>
    <string name="sound_and_vibration">Sound and vibration</string>
    <string name="sounds_and_vibration_desc">Sounds, Vibration, Do not disturb</string>
    <string name="stock_icons">Stock accented</string>
    <string name="successful">Successful</string>
    <string name="swift_black">Black</string>
    <string name="swift_dark">Dark</string>
    <string name="swift_style">Style</string>
    <string name="tab_active">Active</string>
    <string name="tab_failed">Failed</string>
    <string name="tab_inactive">Inactive</string>
    <string name="tab_update">Update</string>
    <string name="toolbar_title_installation_summary">Installation summary</string>
    <string name="tutorial_apps">You can theme 200+ apps with Swift Installer. To get the best experience possible out of the theme, please read the provided informations throughout the app. Make sure to read all dialogs and cards when those show up, and to follow provided instructions when necessary.</string>
    <string name="tutorial_apps_title">200+ themed apps</string>
    <string name="tutorial_basic_usage_content">It is strongly recommended to disable automatic updates in the Play Store settings, and to only update your apps after a theme update supporting the new versions comes out. This way the overlays will match with the apps code and work without issues. \n\nNot doing so can result in your apps to start crashing. After you update an app from the Play Store or an external source, the respective overlay has to be updated along if available, else it has to be removed for the app to work again. \n\nBy keeping automatic updates enabled, or updating a themed app on purpose, you acknowledge and are aware that you may have to remove the overlay from an app to have it working again, until the next theme update adding support for it comes out. \n\nMoreover, before updating your device\'s firmware or software you must uninstall all active overlays, or you risk either a bootloop, or booting to an unusable device.</string>
    <string name="tutorial_customize_content">You can change the theme\'s dark background color and accent color, along with other specific options, before installing the overlays. Head on over to the Personalize card and create that personal feeling!</string>
    <string name="tutorial_customize_title">Personalize</string>
    <string name="tutorial_guide">Swift Installer makes your system dark, and personal! \n\nIt is very important that you understand how it all works before applying the theme, so please take a moment to carefully read the following guide.</string>
    <string name="tutorial_more_usage_info">The first install will require you to install all overlays manually if you are not rooted, and this means a lot of tapping. Once the first install is done though, it will all get much faster due to the smart update system.\n\nPlease note that we cannot guarantee a stable experience if you use this app in combination with native Samsung themes or Substratum overlays.</string>
    <string name="tutorial_more_usage_title">First install</string>
    <string name="tutorial_permission_content">A theme contains overlays, which are what override the resources of the respective apps and themes them. Overlays are installed as APKs on your device. \n\nThe app requests storage permission as it temporarily places APKs on the device before installing them. By pressing \'Give\' you acknowledge and accept this, and grant the permissions. \n\nOverlays for Samsung devices will also include a special permission in their Manifest to make them activate after a reboot.</string>
    <string name="tutorial_permission_title">Permissions</string>
    <string name="white_notifications">White notifications</string>
    <string name="white_notifications_preview">A preview of white notifications</string>
    <string name="continue_theming">Continue theming</string>
    <string name="exit_to_main">Exit to main menu</string>
    <string name="stock_icons_multi">Stock multi-colored</string>
    <string name="force_close">Force close</string>
    <string name="confirm_changes">Confirm Changes</string>
    <string name="discard_changes">Discard changes</string>
    <string name="right">Right</string>
    <string name="left">Left</string>
    <string name="centered">Centered</string>
    <string name="clock">Clock</string>
    <string name="base_theme_dialog_info">The Material option sets a slightly lighter colors for cards, dialogs and popups, and then a darker one for the app bars, to distinguish them from the main background. The Flat option instead sets the same color for all backgrounds</string>
    <string name="base_theme_dialog_title">Theme style</string>
    <string name="default_style">Default</string>
    <string name="android_p_rounded_style">Android P rounded</string>
    <string name="notification_style">Notification style</string>
    <string name="rounded_info">Info!</string>
    <string name="rounded_dialog_info">This option is only tested on stock ROMs. Custom ROMs are not tested and they might cause conflicts with this option. If you want to try this option on a custom ROM, make sure you have ADB debugging enabled and the rescue script available</string>
    <string name="rounded_dialog_title">Rounded style</string>
    <string name="white">White</string>
    <string name="alpha_value">%1$d %%</string>
    <string name="unsupported">Unsupported, please uninstall</string>
    <string name="qs_transparency">Quick settings transparency:</string>
    <string name="whats_this">What\'s this?</string>
    <string name="empty_list_inactive">All overlays active</string>
    <string name="empty_list_active">No active overlays</string>
    <string name="empty_list_updates">No updates available</string>
    <string name="help_msg">Here are some useful links if you need help:</string>
    <string name="telegram_support">Telegram chat support</string>
    <string name="reboot_notif_title">System almost themed!…</string>
    <string name="help">Help</string>
    <string name="settings_title">Settings</string>
    <string name="soft_reboot_title">Use soft reboot</string>
    <string name="soft_reboot_summary">Turn this off if you use SIM pin</string>
    <string name="update_notif_setting_title">Update notifications</string>
    <string name="update_notif_setting_summary">Show a notification when an update is available to install</string>
    <string name="new_app_notif_setting_title">Notifications for new apps</string>
    <string name="new_app_notif_setting_summary">When a new app is installed, show a notification if an overlay is available</string>
    <string name="soft_reboot">Soft reboot</string>
    <string name="color_wheel">Color wheel</string>
</resources>