<?xml version="1.0" encoding="utf-8"?><!--
  ~ /*
  ~  * Copyright (C) 2018 Griffin Millender
  ~  * Copyright (C) 2018 Per Lycke
  ~  * Copyright (C) 2018 Davide Lilli & Nishith Khanna
  ~  *
  ~  * This program is free software: you can redistribute it and/or modify
  ~  * it under the terms of the GNU General Public License as published by
  ~  * the Free Software Foundation, either version 3 of the License, or
  ~  * (at your option) any later version.
  ~  *
  ~  * This program is distributed in the hope that it will be useful,
  ~  * but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  * GNU General Public License for more details.
  ~  *
  ~  * You should have received a copy of the GNU General Public License
  ~  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  ~  */
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/customize_accent_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <TextView
        android:id="@+id/toolbar_subtitle_accent_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif"
        android:text="@string/category_accent"
        android:textAllCaps="true"
        android:textColor="?android:attr/textColorSecondary"
        android:textSize="14sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/accent_category_divider"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:background="@color/divider"
        android:contentDescription="@string/image"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar_subtitle_accent_title"
        app:layout_constraintEnd_toStartOf="@+id/accentColorPicker"
        app:layout_constraintStart_toEndOf="@+id/toolbar_subtitle_accent_title"
        app:layout_constraintTop_toTopOf="@+id/toolbar_subtitle_accent_title" />

    <TextView
        android:id="@+id/accentColorPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="?android:selectableItemBackgroundBorderless"
        android:paddingStart="8dp"
        android:paddingBottom="8dp"
        android:text="@string/color_wheel"
        app:layout_constraintBottom_toBottomOf="@+id/accent_category_divider"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/accent_category_divider"
        tools:ignore="RtlSymmetry" />

    <GridView
        android:id="@+id/accent_palette"
        android:layout_width="0dp"
        android:layout_height="94dp"
        android:layout_marginTop="20dp"
        android:columnWidth="36dp"
        android:numColumns="5"
        android:verticalSpacing="5dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_subtitle_accent_title"
        tools:listitem="@layout/palette_view"/>

    <TextView
        android:id="@+id/hashtag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/hashtag"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/accent_hex_input"
        app:layout_constraintEnd_toStartOf="@+id/accent_hex_input"
        app:layout_constraintTop_toTopOf="@+id/accent_hex_input" />

    <com.brit.swiftinstaller.library.utils.BaseTextInputEditText
        android:id="@+id/accent_hex_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:backgroundTint="@color/minimal_green"
        android:digits="0,1,2,3,4,5,6,7,8,9,a,b,c,d,e,f,A,B,C,D,E,F"
        android:ems="6"
        android:fontFamily="sans-serif"
        android:hint="@string/hex"
        android:imeOptions="actionDone"
        android:inputType="textNoSuggestions|textVisiblePassword"
        android:maxLength="6"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="@+id/accent_palette"
        app:layout_constraintTop_toBottomOf="@+id/accent_palette" />

</androidx.constraintlayout.widget.ConstraintLayout>