<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /*
  ~  * Copyright (C) 2018 Griffin Millender
  ~  * Copyright (C) 2018 Per Lycke
  ~  * Copyright (C) 2018 Davide Lilli & Nishith Khanna
  ~  *
  ~  * This program is free software: you can redistribute it and/or modify
  ~  * it under the terms of the GNU General Public License as published by
  ~  * the Free Software Foundation, either version 3 of the License, or
  ~  * (at your option) any later version.
  ~  *
  ~  * This program is distributed in the hope that it will be useful,
  ~  * but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  * GNU General Public License for more details.
  ~  *
  ~  * You should have received a copy of the GNU General Public License
  ~  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  ~  */
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/popup_menu_root"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/popup_bg"
    android:paddingBottom="16dp"
    android:paddingEnd="32dp"
    android:paddingStart="16dp"
    android:paddingTop="16dp">

    <TextView
        android:id="@+id/popup_menu_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:paddingEnd="110dp"
        android:paddingStart="10dp"
        android:paddingTop="8dp"
        android:text="@string/overflow_about"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:background="?android:selectableItemBackgroundBorderless"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/popup_menu_settings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="?android:selectableItemBackgroundBorderless"
        android:paddingBottom="8dp"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:paddingTop="8dp"
        android:text="@string/settings_title"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/popup_menu_soft_reboot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popup_menu_about" />

    <TextView
        android:id="@+id/popup_menu_soft_reboot"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="?android:selectableItemBackgroundBorderless"
        android:paddingBottom="8dp"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:paddingTop="8dp"
        android:text="@string/soft_reboot"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/popup_menu_help"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popup_menu_settings" />

    <TextView
        android:id="@+id/popup_menu_help"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="?android:selectableItemBackgroundBorderless"
        android:paddingBottom="8dp"
        android:paddingEnd="110dp"
        android:paddingStart="10dp"
        android:paddingTop="8dp"
        android:text="@string/help"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/popup_menu_about"
        app:layout_constraintStart_toStartOf="@+id/popup_menu_about"
        app:layout_constraintTop_toBottomOf="@+id/popup_menu_soft_reboot" />
</androidx.constraintlayout.widget.ConstraintLayout>