<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /*
  ~  * Copyright (C) 2018 Griffin Millender
  ~  * Copyright (C) 2018 Per Lycke
  ~  * Copyright (C) 2018 Davide Lilli & Nishith Khanna
  ~  *
  ~  * This program is free software: you can redistribute it and/or modify
  ~  * it under the terms of the GNU General Public License as published by
  ~  * the Free Software Foundation, either version 3 of the License, or
  ~  * (at your option) any later version.
  ~  *
  ~  * This program is distributed in the hope that it will be useful,
  ~  * but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  * GNU General Public License for more details.
  ~  *
  ~  * You should have received a copy of the GNU General Public License
  ~  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  ~  */
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/card_update_bg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/big_tile_bg" />

    <ImageView
        android:id="@+id/card_update_icon"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginBottom="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/image"
        app:layout_constraintBottom_toBottomOf="@+id/card_update_bg"
        app:layout_constraintStart_toStartOf="@+id/card_update_bg"
        app:layout_constraintTop_toTopOf="@+id/card_update_bg"
        app:srcCompat="@drawable/ic_updates" />

    <TextView
        android:id="@+id/card_update_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:fontFamily="sans-serif"
        android:text="@string/big_tile_install_updates"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/card_update_desc"
        app:layout_constraintEnd_toEndOf="@+id/card_update_bg"
        app:layout_constraintStart_toEndOf="@+id/card_update_icon"
        app:layout_constraintTop_toTopOf="@+id/card_update_bg"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/card_update_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/big_tile_update_msg"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/card_update_bg"
        app:layout_constraintEnd_toEndOf="@+id/card_update_bg"
        app:layout_constraintStart_toEndOf="@+id/card_update_icon"
        app:layout_constraintTop_toBottomOf="@+id/card_update_title" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/update_info_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="84dp"
        app:layout_constraintEnd_toEndOf="@+id/card_update_bg"
        app:layout_constraintTop_toTopOf="@+id/card_update_bg">

        <ImageView
            android:id="@+id/update_info"
            android:layout_width="98dp"
            android:layout_height="30dp"
            android:contentDescription="@string/image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/big_tile_bg" />

        <TextView
            android:id="@+id/updates_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/small_info_updates"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/updates_count"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@+id/update_info"
            app:layout_constraintStart_toStartOf="@+id/update_info"
            app:layout_constraintTop_toTopOf="@+id/update_info" />

        <TextView
            android:id="@+id/updates_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/minimal_orange"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/update_info"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/updates_txt"
            app:layout_constraintTop_toTopOf="@+id/update_info"
            tools:text="0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>